# kolibri

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  grammar.txt
src/: interp.cc  string_providers.h  token_out.cc  token_out.h
src/base/: ast.h  ast_factory.h  ast_id.h  ast_types.h  i_ast_factory.h  i_ast_visitor.h  print_ast.h  token.h
src/languages/: ast.h  ast_factory.h  ast_id.h  ast_types.h  i_ast_factory.h  i_ast_visitor.h  print_ast.h
src/languages/calc/: calc_interpreter.h  calc_lexer.h  calc_parser.h  calc_parser_factory.h  calc_token.h
src/languages/pascal/: pascal_interpreter.h  pascal_lexer.h  pascal_parser.h  pascal_parser_factory.h  pascal_token.h
src/lexer/: lexer.h  lexer_predicates.h  lexer_rules.h  lexer_traits.h  lexer_transforms.h
src/parser/: i_parser_factory.h  parser.h  parser_productions.h  parser_rules.h  rule_id.h
test_files/: equation.txt  main.pas
tests/: integration_test.cc
tests/base/: ast_test.cc  token_test.cc
tests/interpreter/: interpreter_test.cc  touch
tests/languages/: ast_test.cc
tests/languages/calc/: calc_integration_test.cc  calc_interpreter_test.cc  calc_lexer_test.cc  calc_parser_test.cc
tests/lexer/: lexer_rules_test.cc  lexer_test.cc
tests/parser/: parser_productions_test.cc  parser_rules_test.cc  parser_test.cc
